--- a/styles.css
+++ b/styles.css
@@ -277,7 +277,7 @@ h2 {
 .social-links a {
   font-size: 20px;
   color: #fff;
-  margin: 0 30px;
+  margin-right: 20px;
   padding: 10px 16px;
   background-color: var(--primary-color);
   border-radius: 50%;
