--- a/styles.css
+++ b/styles.css
@@ -57,15 +57,32 @@
   background-color: var(--primary-color);
   font-weight: bold;
   color: #fff;
-  border: 2px solid var(--primary-color);
+  border: none;
+  transition: all 180ms ease-in-out;
+}
+
+.primary:hover {
+  background-color: var(--secondary-color);
+  transform: scale(105%);
 }
 
 .secondary {
   padding: 10px 20px;
   border-radius: 50px;
   background-color: #fff;
-  color: var(--secondary-color);
+
   border: 2px solid var(--secondary-color);
+  transition: all 180ms ease-in-out;
+}
+
+.secondary a {
+  text-decoration: none;
+  color: var(--secondary-color);
+  font-weight: bold;
+}
+
+.secondary:hover {
+  transform: scale(105%);
 }
 
 .sekhmet-title {
@@ -298,4 +315,106 @@ h2 {
 
 .credits a:hover {
   color: var(--secondary-color);
+}
+
+@media (max-width: 992px) {
+  .navbar {
+    padding: 20px;
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .navbar ul {
+    margin-bottom: 0px;
+    padding: 0px;
+  }
+
+  .navbar li {
+    list-style: none;
+    margin: 0px 10px;
+    font-size: 15px;
+  }
+
+  .hero {
+    padding: 0px;
+    background-image: url(https://s3.amazonaws.com/shecodesio-production/uploads/files/000/056/351/original/Untitled3.png?1670169476);
+    background-repeat: repeat;
+    background-size: 400px;
+    background-position: center;
+  }
+
+  .hero .row {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+
+  .hero-title {
+    display: flex;
+    padding: 50px 0px 100px 50px;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .primary {
+    padding: 10px 30px;
+    border-radius: 50px;
+    margin-right: 20px;
+    background-color: var(--primary-color);
+    font-weight: bold;
+    color: #fff;
+    border: none;
+    transition: all 180ms ease-in-out;
+  }
+
+  .primary:hover {
+    background-color: var(--secondary-color);
+    transform: scale(105%);
+  }
+
+  .secondary {
+    padding: 10px 20px;
+    border-radius: 50px;
+    background-color: #fff;
+
+    border: 2px solid var(--secondary-color);
+    transition: all 180ms ease-in-out;
+  }
+
+  .secondary a {
+    text-decoration: none;
+    color: var(--secondary-color);
+    font-weight: bold;
+  }
+
+  .secondary:hover {
+    transform: scale(105%);
+  }
+
+  .sekhmet-title {
+    color: var(--primary-color);
+  }
+
+  h1 {
+    font-size: 50px;
+    text-align: left;
+  }
+
+  h2 {
+    font-weight: bold;
+    text-align: center;
+    font-size: 48px;
+    color: var(--secondary-color);
+  }
+  .sekhmet-hero {
+    max-width: 80%;
+    display: block;
+    margin: 0 auto;
+    border-radius: 200px;
+    transition: none;
+    transform: none;
+  }
+
+  .sekhmet-hero:hover {
+    transform: scale(110%);
+  }
 }
