--- a/styles.css
+++ b/styles.css
@@ -94,12 +94,6 @@ h1 {
   text-align: left;
 }
 
-h2 {
-  font-weight: bold;
-  text-align: center;
-  font-size: 48px;
-  color: var(--secondary-color);
-}
 .sekhmet-hero {
   max-height: 80vh;
   display: block;
@@ -126,6 +120,13 @@ h2 {
   background-repeat: repeat-x;
   background-size: 400px;
   background-position: bottom;
+}
+
+h2 {
+  font-weight: bold;
+  text-align: center;
+  font-size: 48px;
+  color: var(--secondary-color);
 }
 
 .introduction h2 {
@@ -319,18 +320,11 @@ h2 {
 
 @media (max-width: 992px) {
   .navbar {
-    padding: 20px;
     display: flex;
     justify-content: space-around;
   }
 
-  .navbar ul {
-    margin-bottom: 0px;
-    padding: 0px;
-  }
-
   .navbar li {
-    list-style: none;
     margin: 0px 10px;
     font-size: 15px;
   }
@@ -338,9 +332,7 @@ h2 {
   .hero {
     padding: 0px;
     background-image: url(https://s3.amazonaws.com/shecodesio-production/uploads/files/000/056/351/original/Untitled3.png?1670169476);
-    background-repeat: repeat;
-    background-size: 400px;
-    background-position: center;
+    background-size: 300px;
   }
 
   .hero .row {
@@ -349,72 +341,61 @@ h2 {
   }
 
   .hero-title {
-    display: flex;
-    padding: 50px 0px 100px 50px;
-    flex-direction: column;
-    justify-content: center;
+    padding: 10px 0px;
+    text-align: center;
   }
 
   .primary {
-    padding: 10px 30px;
-    border-radius: 50px;
-    margin-right: 20px;
-    background-color: var(--primary-color);
-    font-weight: bold;
-    color: #fff;
-    border: none;
-    transition: all 180ms ease-in-out;
-  }
-
-  .primary:hover {
-    background-color: var(--secondary-color);
-    transform: scale(105%);
+    font-size: 12px;
+    border: 1px solid var(--primary-color);
   }
 
   .secondary {
-    padding: 10px 20px;
-    border-radius: 50px;
-    background-color: #fff;
-
-    border: 2px solid var(--secondary-color);
-    transition: all 180ms ease-in-out;
-  }
-
-  .secondary a {
-    text-decoration: none;
-    color: var(--secondary-color);
-    font-weight: bold;
-  }
-
-  .secondary:hover {
-    transform: scale(105%);
-  }
-
-  .sekhmet-title {
-    color: var(--primary-color);
+    font-size: 12px;
+    border: 1px solid var(--secondary-color);
   }
 
   h1 {
-    font-size: 50px;
-    text-align: left;
+    font-size: 40px;
+    text-align: center;
   }
 
   h2 {
-    font-weight: bold;
-    text-align: center;
-    font-size: 48px;
-    color: var(--secondary-color);
+    font-size: 30px;
   }
   .sekhmet-hero {
     max-width: 80%;
-    display: block;
-    margin: 0 auto;
     border-radius: 200px;
     transition: none;
     transform: none;
   }
 
-  .sekhmet-hero:hover {
-    transform: scale(110%);
+  .introduction,
+  .like,
+  .catwalk,
+  .food,
+  .contact {
+    padding: 30px 0px;
+  }
+
+  .introduction {
+    background-image: url(https://s3.amazonaws.com/shecodesio-production/uploads/files/000/056/350/original/Untitled2.png?1670169284);
+    background-repeat: repeat-x;
+    background-size: 200px;
+    background-position: top;
+  }
+
+  .introduction h2 {
+    text-align: center;
+  }
+
+  .sekhmet-intro {
+    max-width: 70%;
+  }
+
+  .introduction p {
+    font-size: 15px;
+    padding: 10px 30px 0px 0px;
+    line-height: 24px;
   }
 }
