--- a/styles.css
+++ b/styles.css
@@ -243,7 +243,7 @@ h2 {
 }
 
 .food img {
-  max-width: 60%;
+  max-width: 70%;
   border-radius: 30px;
   display: block;
   margin: 0 auto;
@@ -271,7 +271,7 @@ h2 {
 }
 
 .contact img {
-  max-width: 50%;
+  max-width: 60%;
   display: block;
   margin: 0 auto;
 }
@@ -375,12 +375,10 @@ h2 {
   .catwalk,
   .food,
   .contact {
-    padding: 30px 0px;
+    padding: 30px 10px;
   }
 
   .introduction {
-    background-image: url(https://s3.amazonaws.com/shecodesio-production/uploads/files/000/056/350/original/Untitled2.png?1670169284);
-    background-repeat: repeat-x;
     background-size: 200px;
     background-position: top;
   }
@@ -397,5 +395,110 @@ h2 {
     font-size: 15px;
     padding: 10px 30px 0px 0px;
     line-height: 24px;
+  }
+
+  .like h2 {
+    padding-bottom: 0px;
+  }
+
+  .like .row {
+    display: flex;
+    justify-content: center;
+  }
+
+  .like .col-4 {
+    max-width: 250px;
+    margin: 10px;
+  }
+
+  .like .orange img {
+    transition: none;
+  }
+
+  .orange p {
+    font-size: 15px;
+    line-height: 24px;
+    padding: 10px 15px;
+  }
+
+  .like .white img {
+    transition: none;
+  }
+
+  .white p {
+    font-size: 15px;
+    line-height: 24px;
+    padding: 10px 15px;
+  }
+
+  .like img:hover {
+    transform: none;
+  }
+
+  .catwalk {
+    background-size: 200px;
+    background-position: center;
+  }
+
+  .catwalk h2 {
+    padding-bottom: 0px;
+  }
+
+  .catwalk p {
+    padding: 0px 50px;
+    font-size: 15px;
+    line-height: 24px;
+  }
+
+  .catwalk img {
+    max-width: 90%;
+    transition: none;
+  }
+
+  .catwalk img:hover {
+    transform: none;
+  }
+
+  .food {
+    background-size: 200px;
+    background-position: center;
+  }
+
+  .food h2 {
+    padding-bottom: 0px;
+  }
+
+  .food p {
+    padding: 30px;
+    font-size: 15px;
+    line-height: 24px;
+  }
+
+  .food img {
+    transition: none;
+  }
+
+  .food img:hover {
+    transform: none;
+  }
+
+  .contact {
+    margin: 0px;
+  }
+
+  .contact-title {
+    font-size: 28px;
+  }
+
+  .contact img {
+    max-width: 60%;
+  }
+
+  .contact-info {
+    padding-left: 0px;
+  }
+
+  .contact a {
+    font-size: 20px;
   }
 }
