--- a/styles.css
+++ b/styles.css
@@ -141,7 +141,7 @@ h2 {
 
 .introduction p {
   font-size: 20px;
-  padding: 50px 150px 50px 0px;
+  padding: 50px 50px 50px 0px;
   line-height: 35px;
 }
 
@@ -680,15 +680,18 @@ h2 {
 
   .contact {
     margin-top: 10px;
-    background-image: url(https://s3.amazonaws.com/shecodesio-production/uploads/files/000/056/350/original/Untitled2.png?1670169284);
-    background-repeat: repeat-x;
-    background-size: 200px;
-    background-position: center;
+    background: none;
   }
 
+  .contact-info {
+    padding-right: 0px;
+  }
   .contact-title {
     font-size: 18px;
     margin-left: 30px;
+    padding-top: 10px;
+    border-top: solid 1px #e3e3e3;
+    color: var(--secondary-color);
   }
 
   .contact img {
