--- a/styles.css
+++ b/styles.css
@@ -215,6 +215,10 @@ h2 {
   padding: 0px 180px 30px;
   line-height: 30px;
 }
+.catwalk a {
+  color: var(--secondary-color);
+  text-decoration: none;
+}
 
 .catwalk img {
   border-radius: 30px;
@@ -244,8 +248,11 @@ h2 {
 }
 
 .food p {
-  padding: 80px;
+  padding: 20px 30px;
+  margin-top: 20px;
   line-height: 30px;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 30px;
 }
 
 .food img {
@@ -478,6 +485,7 @@ h2 {
 
   .food p {
     padding: 30px;
+    margin-left: 10px;
     font-size: 15px;
     line-height: 24px;
   }
